# jinnkunn.com

./: .gitignore  .vercelignore  AGENTS.md  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  open-next.config.ts  package-lock.json  package.json  postcss.config.mjs  prismjs-components.d.ts  proxy.ts  tsconfig.json  vercel.json  wrangler.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-on-content.yml  post-deploy-visual-check.yml  prod-smoke.yml  release-cleanup.yml  release-from-dispatch.yml  search-snapshots.yml  snapshot-staging-d1.yml  ui-compare.yml  ui-smoke.yml  workspace-release.yml
app/: design-system.css  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  state-pages.css
app/(classic)/: blog-index.css  calendar.css  classic.css  design-system-bridge.css  error.tsx  festival.css  fireworks.css  head.tsx  home.css  layout.tsx  lightbox.css  navigation.css  news.css  not-found.tsx  notion-blocks.css  page-overrides.css  page.tsx  posts-mdx.css  publications.css  runtime-polish.css  search.css  teaching.css  toc.css  works.css
app/(v2)/: fonts.ts  head.tsx  layout.tsx  v2-shell.module.css
app/[slug]/: page.tsx
app/apple-touch-icon-precomposed.png/: route.ts
app/apple-touch-icon.png/: route.ts
app/browserconfig.xml/: route.ts
app/favicon.ico/: route.ts
app/llms.txt/: route.ts
app/manifest.json/: route.ts
app/robots.txt/: route.ts
app/rss.xml/: route.ts
app/safari-pinned-tab.svg/: route.ts
app/site-admin/: page.tsx  site-admin-dashboard.module.css  site-admin-markdown-editor.tsx  site-admin-web-console.tsx
app/site.webmanifest/: route.ts
app/sitemap-blog.xml/: route.ts
app/sitemap-pages.xml/: route.ts
app/sitemap-publications.xml/: route.ts
app/sitemap-teaching.xml/: route.ts
app/sitemap.xml/: route.ts
apps/editor-lab/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/site-admin-ios/: README.md
apps/workspace/: README.md  RUST_AUDIT.md  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
apps/workspace/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  commands.manifest.json  tauri.conf.json
apps/workspace/src-tauri/capabilities/: default.json
apps/workspace/src-tauri/icons/: icon.icns
apps/workspace/src-tauri/src/: contacts.rs  desktop_shell.rs  lib.rs  local_calendar.rs  local_db.rs  main.rs  mcp.rs  notes.rs  outbox.rs  projects.rs  secrets.rs  site_admin.rs  sync.rs  todos.rs
apps/workspace/src-tauri/src/calendar/: commands.rs  eventkit.rs  mod.rs  publish_rules.rs  types.rs
cloudflare/: mobile-summary-direct.mjs  protected-route-cookie.mjs  staging-static-auth.mjs  static-shell-protection.mjs  worker-entry.mjs
components/: festival-overlay.tsx  notion-block-behavior.tsx  providers.tsx  raw-html.tsx  route-explorer.tsx  site-admin-breadcrumbs.tsx  site-admin-config-client.tsx  site-admin-deploy-client.tsx  site-admin-login-client.tsx  site-admin-providers.tsx  site-admin-status-client.tsx  site-footer.tsx  site-nav-behavior.tsx  site-nav-enhancers.tsx  site-nav.tsx  site-search-behavior.tsx  special-state-page.tsx  viewport-css-vars.tsx
content/: calendar-public.json  home.json  news.json  now.json  page-tree.json  publications.json  teaching.json  works.json
docs/: design-system-inventory.md  design-system.md  site-admin-rollout.md
lib/: blog-meta.ts  blog.ts  content-auth.ts  flags.ts  load-raw-main.ts  protected-routes.ts  redirects-shape.ts  redirects.ts  routes-manifest.ts  search-index.ts  site-admin-auth.ts  site-config.ts  sync-meta.ts
migrations/: 001_content_files.sql  002_content_files_history.sql  003_calendar_public.sql  004_static_shell_overlays.sql  005_release_jobs.sql  006_release_agents.sql  007_calendar_observations.sql
public/: blog.atom  blog.rss
scripts/: a11y-check.mjs  audit-notion-blocks.mjs  build-cloudflare-content-overlay.mjs  check-cloudflare-cutover.mjs  check-scripts.mjs  check-ui.mjs  classic-css-boundary-check.mjs  classic-style-contract.mjs  db-migrate.mjs  deploy-cloudflare.mjs  dump-content-from-db.mjs  export-static-shell-assets.mjs  home-style-contract.mjs  migrate-files-to-db.mjs  migrate-home-to-mdx.mjs  migrate-home-to-sections.mjs  migrate-news-mdx-to-json.mjs  migrate-publications-to-json.mts  migrate-raw-blog-to-posts.mjs  migrate-raw-top-pages-to-mdx.mjs  migrate-teaching-mdx-to-json.mjs  migrate-works-mdx-to-json.mjs  optimize-notion-assets.mjs  perf-budget.mjs  prebuild.mjs  production-style-regression.mjs  provision-site-admin.mjs  publish-content.mjs  release-agent.mjs  release-cloudflare.mjs  release-from-staging.mjs  release-site.mjs  release-status.mjs  search-snapshots.mjs  site-admin-assets-smoke.mjs  site-admin-content-smoke.mjs  site-admin-rollback-drill.mjs  site-admin-rollout-audit.mjs  site-admin-smoke.mjs  site-admin-write-smoke.mjs  (+17 more)
tests/: asset-cache.test.mjs  assets-store.test.mjs  blog-meta-parser.test.mjs  calendar-ics.test.mjs  calendar-tags.test.mjs  cloudflare-access-auth.test.mjs  cloudflare-deploy-env.test.mjs  components-system.test.mjs  content-source.test.mjs  content-store.test.mjs  db-content-store.test.mjs  deploy-auth.test.mjs  deploy-hook-cloudflare.test.mjs  deploy-hook.test.mjs  deploy-metadata.test.mjs  design-system-contract.test.mjs  design-system-notion-blocks.test.mjs  design-system-primitives.test.mjs  design-system-route-overrides.test.mjs  design-system-theme.test.mjs  design-system-tokens.test.mjs  error-log.test.mjs  filesystem-content-sync.test.mjs  github-content-store.test.mjs  github-users.test.mjs  github-workflow-dispatch.test.mjs  google-analytics.test.mjs  home-preview-document.test.mjs  html-dom-rewrite.test.mjs  mdx-blocks-content-roundtrip.test.mjs  notion-adapters.test.mjs  notion-coerce.test.mjs  notion-sync-block-headings.test.mjs  notion-sync-block-media-image.test.mjs  notion-sync-breadcrumbs.test.mjs  notion-sync-date-utils.test.mjs  notion-sync-render-blocks-dispatcher.test.mjs  notion-sync-render-blocks.test.mjs  notion-sync-route-model.test.mjs  notion-sync-search-text.test.mjs  (+63 more)
(+1105 files in other folders)
