[package]
name = "jinnkunn-workspace"
version = "0.1.0"
description = "Personal workspace shell (site-admin first)"
authors = ["Jinnkunn"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
keyring = "3"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
# Decorum provides `create_overlay_titlebar()` + `set_traffic_lights_inset(x, y)`
# on the WebviewWindow, which lets us slide the macOS traffic lights
# into the sidebar card's top edge (matching personal-os's look).
tauri-plugin-decorum = "1"
# Remembers window position, size, and maximized state across launches.
# Writes to the OS-standard app data dir (~/Library/Application Support
# on macOS).
tauri-plugin-window-state = "2"
# window-vibrancy applies the native macOS NSVisualEffectView behind the
# webview so the window background picks up desktop blur — the translucent
# "和谐" feel personal-os gets from NSVisualEffectMaterial::WindowBackground.
# No-op on Linux; Windows has Mica but we only target macOS for now.
window-vibrancy = "0.6"
url = "2"
