[package]
name = "jinnkunn-workspace"
version = "0.1.0"
description = "Personal workspace shell (site-admin first)"
authors = ["Jinnkunn"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# `apple-native` is required: in keyring v3 every platform backend is
# opt-in. Without this feature the crate silently uses an in-memory
# mock keystore on macOS, so the site-admin token never reaches the
# real Keychain and the user has to re-sign-in on every app launch.
keyring = { version = "3", features = ["apple-native"] }
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
# Decorum provides `create_overlay_titlebar()` + `set_traffic_lights_inset(x, y)`
# on the WebviewWindow, which lets us slide the macOS traffic lights
# into the sidebar card's top edge (matching personal-os's look).
tauri-plugin-decorum = "1"
# Remembers window position, size, and maximized state across launches.
# Writes to the OS-standard app data dir (~/Library/Application Support
# on macOS).
tauri-plugin-window-state = "2"
# Self-update plugin. Currently inert — needs `pubkey` + `endpoints` in
# tauri.conf.json's `plugins.updater` block, plus a signed release
# pipeline (see .github/workflows/release.yml) for updates to actually
# land. Safe to ship disabled: without a pubkey, the plugin initializes
# but check_update() rejects.
tauri-plugin-updater = "2"
# window-vibrancy applies the native macOS NSVisualEffectView behind the
# webview so the window background picks up desktop blur — the translucent
# "和谐" feel personal-os gets from NSVisualEffectMaterial::WindowBackground.
# No-op on Linux; Windows has Mica but we only target macOS for now.
window-vibrancy = "0.6"
url = "2"
