[package]
name = "jinnkunn-workspace"
version = "0.1.0"
description = "Personal workspace shell (site-admin first)"
authors = ["Jinnkunn"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Cross-platform date arithmetic + ISO 8601 (de)serialization. The
# calendar surface accepts ISO strings from the webview and converts
# them to `NSDate` for EventKit on macOS, so we need a portable type
# in between.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# `apple-native` is required: in keyring v3 every platform backend is
# opt-in. Without this feature the crate silently uses an in-memory
# mock keystore on macOS, so the site-admin token never reaches the
# real Keychain and the user has to re-sign-in on every app launch.
keyring = { version = "3", features = ["apple-native"] }
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `tray-icon` enables `tauri::tray::*` so we can mount a menubar icon
# that keeps the app reachable after the main window is closed (the
# "background mode" pattern). Gated behind a feature in Tauri 2 to
# keep mobile builds slim — desktop targets opt in.
tauri = { version = "2.0.0", features = ["tray-icon"] }
# `sync` is only feature we need — the EventKit access-request callback
# fires on a background queue, and tokio::sync::oneshot is the cleanest
# way to bridge that into our `async` Tauri command.
tokio = { version = "1", features = ["sync"] }
# Local SQLite mirror of the D1 content_files / content_files_history
# tables (Phase 5a — read cache; 5b will reuse for write outbox).
# `bundled` compiles SQLite from source so we don't take a system-libsqlite
# dependency on macOS / Windows. Connection is !Send, so commands open a
# fresh connection per call (cheap — microseconds for SQLite).
rusqlite = { version = "0.32", features = ["bundled"] }
# Decode hex-encoded body bytes that come back from /api/site-admin/sync/pull.
hex = "0.4"
# Decorum provides `create_overlay_titlebar()` + `set_traffic_lights_inset(x, y)`
# on the WebviewWindow, which lets us slide the macOS traffic lights
# into the sidebar card's top edge (matching personal-os's look).
tauri-plugin-decorum = "1"
# Remembers window position, size, and maximized state across launches.
# Writes to the OS-standard app data dir (~/Library/Application Support
# on macOS).
tauri-plugin-window-state = "2"
# Self-update plugin. Currently inert — needs `pubkey` + `endpoints` in
# tauri.conf.json's `plugins.updater` block, plus a signed release
# pipeline (see .github/workflows/release.yml) for updates to actually
# land. Safe to ship disabled: without a pubkey, the plugin initializes
# but check_update() rejects.
tauri-plugin-updater = "2"
# window-vibrancy applies the native macOS NSVisualEffectView behind the
# webview so the window background picks up desktop blur — the translucent
# "和谐" feel personal-os gets from NSVisualEffectMaterial::WindowBackground.
# No-op on Linux; Windows has Mica but we only target macOS for now.
window-vibrancy = "0.6"
url = "2"

# EventKit bindings — kept macOS-only so a future Linux/Windows build
# still compiles. The objc2 family is the maintained successor to the
# old `cocoa`/`objc` crates; objc2-event-kit gives us EKEventStore,
# EKCalendar, EKEvent without writing manual selectors.
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
# CGColor lets us read EKCalendar's color and turn it into the hex
# string the webview expects. Only the CGColor feature is needed.
objc2-core-graphics = { version = "0.3", features = ["CGColor"] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSDate",
    "NSDictionary",
    "NSError",
    "NSEnumerator",
    "NSNotification",
    "NSObject",
    "NSOperation",
    "NSString",
    "NSURL",
    "NSValue",
    "NSThread",
    "block2",
] }
objc2-event-kit = { version = "0.3", features = [
    "EKCalendar",
    "EKCalendarItem",
    "EKError",
    "EKEvent",
    "EKEventStore",
    "EKObject",
    "EKParticipant",
    "EKSource",
    "EKTypes",
    # Passthrough — without this the EKCalendar `CGColor()` accessor
    # is hidden behind its own #[cfg(feature = "objc2-core-graphics")].
    "objc2-core-graphics",
] }
